@@ -184,12 +184,10 @@ start_couchdb () {
         -pa %localerlanglibdir%/%couchdbebindir% \
             %localerlanglibdir%/%mochiwebebindir% \
             %localerlanglibdir%/%ibrowseebindir% \
-        -eval \"application:load(inets)\" \
         -eval \"application:load(ibrowse)\" \
         -eval \"application:load(crypto)\" \
         -eval \"application:load(couch)\" \
         -eval \"crypto:start()\" \
-        -eval \"inets:start()\" \
         -eval \"ibrowse:start()\" \
         -eval \"couch_server:start([$start_arguments]), receive done -> done end.\" "
     if test "$BACKGROUND_BOOLEAN" = "true" \
